--- a/index.html
+++ b/index.html
@@ -17,30 +17,349 @@
     <main>
         <section class="sec-1">
             <img src="./assets/Element.png" alt="" class="sec-1__element">
-            <div class="p1">
-                <alticle class="p1__content">
-                    <h3 class="p1__content--title">Get More Done with whitepace</h3>
-                    <p class="p1__content--para">Project management software that enables your teams to collaborate, plan, analyze and manage everyday tasks</p>
+            <div class="sec-1__tab">
+                <alticle class="content">
+                    <h3 class="content__title">Get More Done with whitepace</h3>
+                    <p class="content__para">
+                        Project management software that enables your teams to collaborate, plan, analyze and manage everyday tasks
+                    </p>
                     <button class="btn" style="width: 232px; height: 70px;">
                         Try TasKey Free
                         <img src="./assets/Arrow.svg" alt="">
                     </button>
                 </alticle>
-                <div class="p1__pic" ></div>
+                <div class="picture__1"></div>
             </div>
         </section>
         <section class="sec-2">
-            <div class="p2">
-
+            <img src="./assets/Element_sec-2.png" alt="" class="sec-2__element">
+            <div class="sec-2__tab-1">
+                <article class="content">
+                    <h3 class="content__title">Project
+                        <img src="./assets/underline1.png" alt="" class="content__underline" style="width: 345.15px; height: 31.84px;">
+                        <span>Management</span></h3>
+                    <p class="content__para">Images, videos, PDFs and audio files are supported.
+                        Create math expressions and diagrams directly from the app.
+                        Take photos with the mobile app and save them to a note.</p>
+                    <button class="btn" style="width: 190px; height: 59px;">
+                        Get Started
+                        <img src="./assets/Arrow.svg" alt="">
+                    </button>
+                </article>
+                <div class="picture__2"></div>
             </div>
-            <div class="p3">
-                
+            <div class="sec-2__tab-2">
+                <article class="content">
+                    <h3 class="content__title">Work
+                        <img src="./assets/underline1.png" alt="" class="content__underline" style="width: 222.71px; height: 31.35px;">
+                        <span>together</span></h3>
+                    <p class="content__para">
+                        With whitepace, share your notes with your colleagues and collaborate on them.
+                        You can also publish a note to the internet and share the URL with others.
+                    </p>
+                    <button class="btn" style="width: 177px; height: 59px;">
+                        Try it now
+                        <img src="./assets/Arrow.svg" alt="">
+                    </button>
+                </article>
+                <img src="./assets/Work Together Image.svg" alt="" class="picture__3">
+            </div>
+        </section>
+        <section class="sec-3">
+            <div class="sec-3__tab">
+                <alticle class="content">
+                    <h3 class="content__title">Use as
+                        <img src="./assets/underline1.png" alt="" class="content__underline" style="width: 326px; height: 28.28px; margin-left: 70px;">
+                        <span>Extension</span></h3>
+                    <p class="content__para">
+                        Use the web clipper extension, available on Chrome and Firefox, to save web pages or take screenshots as notes.
+                    </p>
+                    <button class="btn" style="width: 164px; height: 59px;">
+                        Let’s Go
+                        <img src="./assets/Arrow.svg" alt="">
+                    </button>
+                </alticle>
+                <div class="picture__4"></div>
+            </div>
+        </section>
+        <section class="sec-4">
+            <div class="sec-4__tab">
+                <div class="picture__5"></div>
+                <alticle class="content">
+                    <h3 class="content__title">Customise it to your
+                        <img src="./assets/underline1.png" alt="" class="content__underline" style="width: 236.73px; height: 19.8px; margin-left: -30px;">
+                        <span>needs</span>
+                    </h3>
+                    <p class="content__para">
+                        Customise the app with plugins, custom themes and multiple text editors (Rich Text or Markdown).
+                        Or create your own scripts and plugins using the Extension API.
+                    </p>
+                    <button class="btn" style="width: 176px; height: 63px;"> <!--All of buttons are wrong-->
+                        Let’s Go
+                        <img src="./assets/Arrow.svg" alt="">
+                    </button>
+                </alticle>
+            </div>
+        </section>
+        <section class="sec-5">
+            <div class="sec-5__tab-1">
+                <alticle class="content">
+                    <h3 class="content__title">Choose
+                        <img src="./assets/underline1.png" alt="" class="content__underline" style="width: 290px; height: 26.24px; margin-left: 0;">
+                        <span>Your Plan</span>
+                    </h3>
+                    <p class="content__para">
+                        Whether you want to get organized, keep your personal life on track, or boost workplace productivity, Evernote has the right plan for you.
+                    </p>
+                </alticle>
+            </div>
+            <div class="sec-5__tab-2">
+                <div class="price-left">
+                    <p class="price-left__title">Free</p>
+                    <p class="price-left__monney">$0</p>
+                    <p class="price-left__intro">Capture ideas and find them quickly</p>
+                    <ul class="price-left__ul">
+                        <li>Sync unlimited devices</li>
+                        <li>10 GB monthly uploads</li>
+                        <li>200 MB max. note size</li>
+                        <li>Customize Home dashboard and access extra widgets</li>
+                        <li>Connect primary Google Calendar account</li>
+                        <li>Add due dates, reminders, and notifications to your tasks</li>
+                    </ul>
+                    <button class="btn" style="width: 176px; height: 63px;"> <!--All of buttons are wrong-->
+                        Get Started
+                    </button>
+                </div>
+                <div class="price-mid">
+                    <p class="price-mid__title">Personal</p>
+                    <p class="price-mid__monney">$11.2</p>
+                    <p class="price-mid__intro">Keep home and family on track</p>
+                    <ul class="price-mid__ul">
+                        <li>Sync unlimited devices</li>
+                        <li>10 GB monthly uploads</li>
+                        <li>200 MB max. note size</li>
+                        <li>Customize Home dashboard and access extra widgets</li>
+                        <li>Connect primary Google Calendar account</li>
+                        <li>Add due dates, reminders, and notifications to your tasks</li>  
+                    </ul>
+                    <button class="btn" style="width: 176px; height: 63px;"> <!--All of buttons are wrong-->
+                        Get Started
+                    </button>
+                </div>
+                <div class="price-right">
+                    <p class="price-left__title">Organization</p>
+                    <p class="price-left__monney">$49.99</p>
+                    <p class="price-left__intro">Capture ideas and find them quickly</p>
+                    <ul class="price-left__ul">
+                        <li>Sync unlimited devices</li>
+                        <li>10 GB monthly uploads</li>
+                        <li>200 MB max. note size</li>
+                        <li>Customize Home dashboard and access extra widgets</li>
+                        <li>Connect primary Google Calendar account</li>
+                        <li>Add due dates, reminders, and notifications to your tasks</li>
+                    </ul>
+                    <button class="btn" style="width: 176px; height: 63px;"> <!--All of buttons are wrong-->
+                        Get Started
+                    </button>
+                </div>
+            </div>
+        </section>
+        <section class="sec-6">
+            <img src="./assets/Element_sec-6.png" alt="" class="sec-6__element">
+            <div class="sec-6__tab">
+                <alticle class="content" style="text-align:left;">
+                    <h3 class="content__title">Your work, everywhere you are</h3>
+                    <p class="content__para">
+                        Access your notes from your computer, phone or tablet by synchronising with various services, including whitepace, Dropbox and OneDrive.
+                        The app is available on Windows, macOS, Linux, Android and iOS.
+                        A terminal app is also available!
+                    </p>
+                    <button class="btn" style="width: 185px; height: 59px; margin-left: 0;"> <!--All of buttons are wrong-->
+                        Try Taskey
+                        <img src="./assets/Arrow.svg" alt="">
+                    </button>
+                </alticle>
+            </div>
+        </section>
+        <section class="sec-7">
+            <div class="sec-7__tab">
+                <img src="./assets/pic.png" alt="" class="picture__6">
+                <alticle class="content">
+                    <h3 class="content__title">100%
+                        <img src="./assets/underline1.png" alt="" class="content__underline" style="width: 298.51px; height: 32.56px; margin-left: 0;">
+                        <span>your data</span>
+                    </h3>
+                    <p class="content__para">
+                        The app is open source and your notes are saved to an open format, so you'll always have access to them.
+                        Uses End-To-End Encryption (E2EE) to secure your notes and ensure no-one but yourself can access them.
+                    </p>
+                    <button class="btn" style="width: 184px; height: 59px;"> <!--All of buttons are wrong-->
+                        Read more
+                        <img src="./assets/Arrow.svg" alt="">
+                    </button>
+                </alticle>
+            </div>
+        </section>
+        <section class="sec-8">
+            <div class="sec-8__tab">
+                <article class="content">
+                    <h3 class="content__title" >Our
+                        <img src="./assets/underline1.png" alt="" class="content__underline" style="width: 261px; height: 38.77px; margin-left: 0;">
+                        <span>sponsors</span>
+                    </h3>
+                </article>
+                <div class="sec-8__tab--sponsors">
+                    <img src="./assets/Apple.svg" alt="">
+                    <img src="./assets/Microsoft.svg" alt="">
+                    <img src="./assets/Slack.svg" alt="">
+                    <img src="./assets/Google.svg" alt="">
+                </div>
+            </div>
+        </section>
+        <section class="sec-9">
+            <div class="sec-9__tab">
+                <img src="./assets/Apps.png" alt="" class="picture__7">
+                <alticle class="content">
+                    <h3 class="content__title">Work with Your Favorite Apps Using whitepace</h3>
+                    <p class="content__para">
+                        Whitepace teams up with your favorite software.
+                        Integrate with over 1000+ apps with Zapier to have all the tools you need for your project success.
+                    </p>
+                    <button class="btn" style="width: 205px; height: 63px;"> <!--All of buttons are wrong-->
+                        Read more
+                        <img src="./assets/Arrow.svg" alt="">
+                    </button>
+                </alticle>
+            </div>
+        </section>
+        <section class="sec-10">
+            <div class="sec-10__tab-1">
+                <alticle class="content">
+                    <h3 class="content__title">See what our
+                        <img src="./assets/underline1.png" alt="" class="content__underline" style="width: 230.33px; height: 31.9px; margin-left: -30;">
+                        <span>trusted</span>
+                        users Say</h3>
+                </alticle>
+            </div>
+            <div class="sec-10__tab-2">
+                <div class="client-1">
+                    <img src="./assets/Avater 01.png" alt="" class="client-1__avata">
+                    <p class="client-1__saying">
+                        “If you haven’t tried EventSprout yet, you need to give it a shot for your next event.
+                        It’s so easy and intuitive to get a new event setup and if you need any help their customer service is seriously amazing.”
+                    </p>
+                    <div class="client-1__author">
+                        <div class="client-1__author--name">
+                            <b>Jessie Owner</b>
+                            <p>Founder, XYZ Company</p>
+                        </div>
+                        <img src="./assets/Btn-Star.svg" alt="" class="client-1__author--star">
+                    </div>
+                </div>
+                <div class="client-2">
+                    <img src="./assets/Avater 02.png" alt="" class="client-2__avata">
+                    <p class="client-2__saying">
+                        “If you haven’t tried EventSprout yet, you need to give it a shot for your next event.
+                        It’s so easy and intuitive to get a new event setup and if you need any help their customer service is seriously amazing.”
+                    </p>
+                    <div class="client-2__author">
+                        <div class="client-2__author--name">
+                            <b>Jessie Owner</b>
+                            <p>Founder, XYZ Company</p>
+                        </div>
+                        <img src="./assets/Btn-Star.svg" alt="" class="client-2__author--star">
+                    </div>
+                </div>
+                <div class="client-3">
+                    <img src="./assets/Avater 03.png" alt="" class="client-3__avata">
+                    <p class="client-3__saying">
+                        “If you haven’t tried EventSprout yet, you need to give it a shot for your next event.
+                        It’s so easy and intuitive to get a new event setup and if you need any help their customer service is seriously amazing.”
+                    </p>
+                    <div class="client-1__author">
+                        <div class="client-3__author--name">
+                            <b>Jessie Owner</b>
+                            <p>Founder, XYZ Company</p>
+                        </div>
+                        <img src="./assets/Btn-Star.svg" alt="" class="client-3__author--star">
+                    </div>
+                </div>
+            </div>
+            <img src="./assets/Slider.svg" alt="" class="sec-10__end">
+        </section>
+        <section class="sec-11">
+            <div class="sec-11__tab">
+                <div class="sec-11__tab">
+                    <alticle class="content" style="text-align:left;">
+                        <h3 class="content__title">Try Whitepace today</h3>
+                        <p class="content__para" style="margin-bottom: 40px;">
+                            Get started for free. <br>
+                            Add your whole team as your needs grow.
+                        </p>
+                        <button class="btn" style="width: 239px; height: 63px; margin-left: 0;"> <!--All of buttons are wrong-->
+                            Try Taskey free
+                            <img src="./assets/Arrow.svg" alt="">
+                        </button>
+                        <p class="content__para" style="margin: 40px 0;">
+                            On a big team? Contact sales
+                        </p>
+                        <img src="./assets/App-icon.svg" alt="">
+                    </alticle>
+                </div>
             </div>
         </section>
     </main>
-    <footer>
-
+    <footer class="footer">
+        <div class="footer__info">
+            <div class="footer__info--tab-1">
+                <img src="./assets/Logo.svg" alt="">
+                <p>
+                    whitepace was created for the new ways we live and work. <br>
+                    We make beautyfully designed around the world
+                </p>
+            </div>
+            <div class="footer__info--tab-2">
+                <b>Product</b>
+                <p style="color: #FFE492;">Overview</p>
+                <p>Pricing</p>
+                <p>Customer stories</p>
+            </div>
+            <div class="footer__info--tab-3">
+                <b>Resources</b>
+                <p>Blog</p>
+                <p>Guides & tutorials</p>
+                <p>Help center</p>
+            </div>
+            <div class="footer__info--tab-4">
+                <b>Company</b>
+                <p>About us</p>
+                <p>Careers</p>
+                <p>Media kit</p>
+            </div>
+            <div class="footer__info--tab-5">
+                <b>Try It Today</b>
+                <p>Get started for free. <br>
+                    Add your whole team as your needs grow.</p>
+                    <button class="btn" style="width: 187px; height: 59px; margin: 23px auto;"> <!--All of buttons are wrong-->
+                        Start today
+                        <img src="./assets/Arrow.svg" alt="">
+                    </button>
+            </div>
+        </div>
+        <div class="footer__btm">
+            <nav class="footer__btm--nav">
+                <button>
+                    <img src="./assets/Global.svg" alt="">
+                    English
+                    <img src="./assets/Arrowdown.svg" alt="">
+                </button>
+                <button>Terms & privacy</button>
+                <button>Security</button>
+                <button>Status</button>
+                <button>©2021 Whitepace LLC.</button>
+            </nav>
+            <img src="./assets/Social Icon.svg" alt="" class="footer__btm--icons">
+        </div>
     </footer>
-    
 </body>
 </html>
