--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@
                     <article class="content">
                         <h3 class="content__title">
                             Project
-                                <!--<img src="./assets/underline1.png" alt="" class="content__underline" style="width: 345.15px; height: 31.84px;">-->
-                                <span class="under-line">Management</span>
+                            <span class="under-line" id="_1">Management</span>
                         </h3>
                         <p class="content__para">Images, videos, PDFs and audio files are supported.
                             Create math expressions and diagrams directly from the app.
@@ -118,10 +117,7 @@
                     <article class="content">
                         <h3 class="content__title">
                             Work
-                            <span>
-                                <!--<img src="./assets/underline1.png" alt="" class="content__underline" style="width: 222.71px; height: 31.35px;">-->
-                                <span class="under-line">together</span>
-                            </span>
+                            <span class="under-line" id="_2">together</span>
                         </h3>
                         <p class="content__para">
                             With whitepace, share your notes with your colleagues and collaborate on them.
@@ -149,8 +145,7 @@
                     <alticle class="content">
                         <h3 class="content__title">
                             Use as
-                            <!--<img src="./assets/underline1.png" alt="" class="content__underline" style="width: 326px; height: 28.28px; margin-left: 70px;">-->
-                            <span class="under-line">Extension</span>
+                            <span class="under-line" id="_3">Extension</span>
                         </h3>
                         <p class="content__para">
                             Use the web clipper extension, available on Chrome and Firefox, to save web pages or take screenshots as notes.
@@ -177,8 +172,7 @@
                     <alticle class="content">
                         <h3 class="content__title">
                             Customise it to your
-                            <!--<img src="./assets/underline1.png" alt="" class="content__underline" style="width: 236.73px; height: 19.8px; margin-left: -30px;">-->
-                            <span class="under-line">needs</span>
+                            <span class="under-line" id="_4">needs</span>
                         </h3>
                         <p class="content__para">
                             Customise the app with plugins, custom themes and multiple text editors (Rich Text or Markdown).
@@ -204,8 +198,7 @@
                     <alticle class="content" id="center">
                         <h3 class="content__title">
                             Choose
-                            <!--<img src="./assets/underline1.png" alt="" class="content__underline" style="width: 290px; height: 26.24px; margin-left: 0;">-->
-                            <span class="under-line">Your Plan</span>
+                            <span class="under-line" id="_5">Your Plan</span>
                         </h3>
                         <p class="content__para">
                             Whether you want to get organized, keep your personal life on track, or boost workplace productivity, Evernote has the right plan for you.
@@ -283,7 +276,7 @@
                 <alticle class="content" id="left">
                     <h3 class="content__title">
                         Your work, everywhere 
-                        <span  class="under-line">you are</span>
+                        <span  class="under-line" id="_6">you are</span>
                     </h3>
                     <p class="content__para">
                         Access your notes from your computer, phone or tablet by synchronising with various services, including whitepace, Dropbox and OneDrive.
@@ -312,8 +305,7 @@
                     <alticle class="content">
                         <h3 class="content__title">
                             100%
-                            <!--<img src="./assets/underline1.png" alt="" class="content__underline" style="width: 298.51px; height: 32.56px; margin-left: 0;">-->
-                            <span class="under-line">your data</span>
+                            <span class="under-line" id="_7">your data</span>
                         </h3>
                         <p class="content__para">
                             The app is open source and your notes are saved to an open format, so you'll always have access to them.
@@ -334,8 +326,7 @@
             <div class="sec-8__tab">
                 <article class="content">
                     <h3 class="content__title" >Our
-                        <!--<img src="./assets/underline1.png" alt="" class="content__underline" style="width: 261px; height: 38.77px; margin-left: 0;">-->
-                        <span class="under-line">sponsors</span>
+                        <span class="under-line" id="_8">sponsors</span>
                     </h3>
                 </article>
                 <div class="sec-8__tab--sponsors">
@@ -383,8 +374,7 @@
             <div class="sec-10__tab-1">
                 <alticle class="content" id="center">
                     <h3 class="content__title">See what our
-                        <!--<img src="./assets/underline1.png" alt="" class="content__underline" style="width: 230.33px; height: 31.9px; margin-left: -30;">-->
-                        <span class="under-line">trusted</span>
+                        <span class="under-line" id="_9">trusted</span>
                         users Say</h3>
                 </alticle>
             </div>
